data/forge_javadoc/1.12.2/raw/net/minecraft/world/WorldProviderEnd.md
---
title: "WorldProviderEnd"
description: "public class WorldProviderEnd extends WorldProvider"
package: "net/minecraft/world"
version: "1.12.2"
forgeBuild: "14.23.5.2859"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.12.2-14.23.5.2859/net/minecraft/world/WorldProviderEnd.html"
sourceType: javadoc
---

# WorldProviderEnd

**Inheritance:** java.lang.Object → net.minecraft.world.WorldProvider → net.minecraft.world.WorldProviderEnd

## Class signature

```java
public class WorldProviderEnd extends WorldProvider
```

## Methods

- `float[] calcSunriseSunsetColors(float celestialAngle, float partialTicks)`
- `float calculateCelestialAngle(long worldTime, float partialTicks)`
- `boolean canCoordinateBeSpawn(int x, int z)`
- `boolean canRespawnHere()`
- `IChunkGenerator createChunkGenerator()`
- `boolean doesXZShowFog(int x, int z)`
- `int getAverageGroundLevel()`
- `float getCloudHeight()`
- `DimensionType getDimensionType()`
- `DragonFightManager getDragonFightManager()`
- `Vec3d getFogColor(float p_76562_1_, float p_76562_2_)`
- `BlockPos getSpawnCoordinate()`
- `void init()`
- `boolean isSkyColored()`
- `boolean isSurfaceWorld()`
- `void onPlayerAdded(EntityPlayerMP player)`
- `void onPlayerRemoved(EntityPlayerMP player)`
- `void onWorldSave()`
- `void onWorldUpdateEntities()`

## Fields

- `WorldProviderEnd`
